Further fixes with alignment and matching with figma for goal

--- a/src/app/layout.css
+++ b/src/app/layout.css
@@ -1,6 +1,6 @@
 .layout {
-  max-width: 68.75rem;
-  width: 80%;
+  max-width: 80rem;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
